<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myrssreader.MainActivity" >

	<item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>

	<item
        android:id="@+id/add_description"
        android:orderInCategory="2"
        android:title="@string/add_description"
        app:showAsAction="never"/>

    <item
        android:id="@+id/delete_description"
        android:orderInCategory="3"
        android:title="@string/delete_description"
        app:showAsAction="never"/>

	<item
        android:id="@+id/shift_description"
        android:orderInCategory="3"
        android:title="@string/shift_description"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:orderInCategory="5"
        android:title="@string/aboutme"
        app:showAsAction="never"/>

</menu>
